# athenosum

./: .gitignore  CMakeLists.txt  README.md
include/athenosum/: beatmap.h  common.h  game.h  process.h  window.h
src/: beatmap.c  beatmap.h  game.c  process.c  window.c
test/: main.c
